--- a/pom.xml
+++ b/pom.xml
@@ -8,17 +8,18 @@
     <name>YES Library</name>
     <url>http://yestech.org/sites/yeslib/</url>
     <description>A collection of classes that can be used across yestech artifacts/components, but must not be dependant
-    on any yestech component.  Most of the code is utility type code.  When more than a few classes are
-    found to be in a package or the package start to handle more that a few reposibilities then a new
-        independant component is created and the existing code in yeslib is ported to the new component.</description>
+        on any yestech component. Most of the code is utility type code. When more than a few classes are
+        found to be in a package or the package start to handle more that a few reposibilities then a new
+        independant component is created and the existing code in yeslib is ported to the new component.
+    </description>
     <parent>
         <groupId>org.yestech</groupId>
         <artifactId>yessuperpom</artifactId>
-        <version>1.2.0</version>
+        <version>1.3.0</version>
     </parent>
     <scm>
-        <connection>scm:git:git://github.com/yestech/yeslib.git</connection>
-        <developerConnection>scm:git:git://github.com/yestech/yeslib.git</developerConnection>
+        <connection>scm:git:git@github.com:yestech/yeslib.git</connection>
+        <developerConnection>scm:git:git@github.com:yestech/yeslib.git</developerConnection>
         <url>http://github.com/yestech/yeslib/tree/master</url>
     </scm>
     <organization>
@@ -59,18 +60,80 @@
             </roles>
         </developer>
     </developers>
+    <ciManagement>
+        <url>http://ci.yestech.org</url>
+        <system>hudson</system>
+    </ciManagement>
     <properties>
         <tim.pipes.version>2.1.0</tim.pipes.version>
         <tim-annotations.version>1.4.0</tim-annotations.version>
         <hazelcast.version>1.7.1</hazelcast.version>
         <resteasy.version>1.2.1.GA</resteasy.version>
+        <spring.version>2.5.6.SEC01</spring.version>
+        <servlet.version>2.5</servlet.version>
+        <jsp.version>2.0</jsp.version>
+        <ehcache.version>2.2.0</ehcache.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>${servlet.version}</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>${jsp.version}</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring</artifactId>
+            <version>${spring.version}</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${spring.version}</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>jaxrs-api</artifactId>
             <version>${resteasy.version}</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
@@ -100,6 +163,7 @@
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
             <version>${hazelcast.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.terracotta.modules</groupId>
@@ -135,48 +199,56 @@
             <groupId>jdom</groupId>
             <artifactId>jdom</artifactId>
             <version>1.0</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-jms_1.1_spec</artifactId>
             <version>1.1.1</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
             <version>1.3.1</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.4</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.codehaus.jettison</groupId>
             <artifactId>jettison</artifactId>
             <version>1.1</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.3</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.caucho</groupId>
-            <artifactId>resin-hessian</artifactId>
-            <version>3.2.0</version>
+            <artifactId>hessian</artifactId>
+            <version>4.0.7</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>1.6</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.4</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -199,8 +271,8 @@
         </dependency>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
-            <artifactId>ehcache</artifactId>
-            <version>1.5.0</version>
+            <artifactId>ehcache-core</artifactId>
+            <version>${ehcache.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -213,16 +285,19 @@
             <groupId>cglib</groupId>
             <artifactId>cglib-full</artifactId>
             <version>2.0.2</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>1.8.0</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
             <version>1.6.2</version>
+            <optional>true</optional>
         </dependency>
     </dependencies>
     <build>
@@ -233,12 +308,6 @@
             </resource>
         </resources>
     </build>
-    <repositories>
-        <repository>
-            <id>caucho</id>
-            <url>http://caucho.com/m2/</url>
-        </repository>
-    </repositories>
 </project>
 
         
